app/src/test/resources/programs/invalid/not_finished_comment.extention
foo main() -> Int = {
    0
}

/* That program is invalid because there is a multi line comment without ending 
